--- a/src/SortingAnimation.css
+++ b/src/SortingAnimation.css
@@ -2,8 +2,11 @@
     position: relative;
     display: flex;
     justify-content: center;
+    align-items: flex-end;
     height: 90vh;
     min-height: 600px;
+    box-sizing: border-box;
+    border-bottom: 50px solid #282c34;
 }
 
 .array-bar {
@@ -31,7 +34,6 @@
     top: -25px;
     font-size: 36px;
     font-weight: 800;
-    
     color: white;
 }
 
@@ -50,4 +52,14 @@
 
 .control-container button:hover {
     background: turquoise;
+}
+
+.custom-footer {
+    display: flex;
+    position: fixed;
+    bottom: 0;
+    left: 40%;
+    justify-content: center;
+    color: white;
+    text-align: center;
 }
